@@ -7,6 +7,7 @@ import { MaterialModule } from '~/app/material.module';
 import { DiskDatatablePageComponent } from '~/app/pages/storage/disks/disk-datatable-page.component';
 import { DiskFormPageComponent } from '~/app/pages/storage/disks/disk-form-page.component';
 import { FilesystemDatatablePageComponent } from '~/app/pages/storage/filesystems/filesystem-datatable-page.component';
+import { FilesystemDetailsTextPageComponent } from '~/app/pages/storage/filesystems/filesystem-details-text-page.component';
 import { FilesystemEditFormPageComponent } from '~/app/pages/storage/filesystems/filesystem-edit-form-page.component';
 import { FilesystemMountFormPageComponent } from '~/app/pages/storage/filesystems/filesystem-mount-form-page.component';
 import { FilesystemQuotaDatatablePageComponent } from '~/app/pages/storage/filesystems/filesystem-quota-datatable-page.component';
@@ -42,6 +43,7 @@ import { SharedModule } from '~/app/shared/shared.module';
     SharedFolderPermissionsDatatablePageComponent,
     SharedFolderSnapshotsTabsPageComponent,
     SharedFolderAllSnapshotsTabsPageComponent,
+    FilesystemDetailsTextPageComponent,
     FilesystemEditFormPageComponent,
     FilesystemMountFormPageComponent,
     FilesystemQuotaDatatablePageComponent,
